21/09/2567  Update เว็บ ให้ดูดีขึ้น

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
-
+php_flag display_errors 1
 # หากไม่ใช่ไฟล์จริง
 RewriteCond %{REQUEST_FILENAME} !-f
 # และไม่ใช่ไดเรกทอรี
@@ -7,4 +7,4 @@ RewriteCond %{REQUEST_FILENAME} !-d
 # และมี .php ต่อท้าย
 RewriteCond %{REQUEST_FILENAME}.php -f
 # ให้เพิ่ม .php ต่อท้าย URL ที่ร้องขอ
-RewriteRule ^(.+)$ $1.php [L]
+RewriteRule ^(.*)$ $1.php [L]
